--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#ff0e5211"
+    android:layout_height="match_parent"
     tools:context="com.waterfall.thomaswatson.theprovider.Game">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -10,17 +10,17 @@
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:layout_gravity="center_horizontal|top"
-        android:background="@drawable/barebones_hut" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/imageView2"-->
+        <!--android:layout_gravity="center_horizontal|top"-->
+        <!--android:background="@drawable/barebones_hut" />-->
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:layout_gravity="center_horizontal|bottom"
-        android:background="@drawable/barebones_forrest" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/imageView3"-->
+        <!--android:layout_gravity="center_horizontal|bottom"-->
+        <!--android:background="@drawable/barebones_forrest" />-->
 </FrameLayout>
